tests/machine/x/scala/group_by_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:13: error: value customerId is not a member of scala.collection.immutable.Map[String,Int]
    val stats = ((for { o <- orders; c <- customers; if o.customerId == (c.id).asInstanceOf[Int] } yield (c.name, Stat(o = o, c = c))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("name" -> g.key, "count" -> (g).size) }.toList
                                                          ^
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:13: error: value id is not a member of scala.collection.immutable.Map[String,Any]
    val stats = ((for { o <- orders; c <- customers; if o.customerId == (c.id).asInstanceOf[Int] } yield (c.name, Stat(o = o, c = c))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("name" -> g.key, "count" -> (g).size) }.toList
                                                                           ^
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:13: error: type mismatch;
 found   : scala.collection.immutable.Map[String,Int]
 required: group_by_join.Order
    val stats = ((for { o <- orders; c <- customers; if o.customerId == (c.id).asInstanceOf[Int] } yield (c.name, Stat(o = o, c = c))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("name" -> g.key, "count" -> (g).size) }.toList
                                                                                                                           ^
/workspace/mochi/tests/machine/x/scala/group_by_join.scala:13: error: value map is not a member of Any
    val stats = ((for { o <- orders; c <- customers; if o.customerId == (c.id).asInstanceOf[Int] } yield (c.name, Stat(o = o, c = c))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("name" -> g.key, "count" -> (g).size) }.toList
                                                                                                                                                                                         ^
four errors found
